Slot7 and Slot8
.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 /Lap2/build/
 /Slot7/nbproject/private/
 /Slot7/build/
+/Lap3/nbproject/private/
+/Lap3/build/
+/Slot8/nbproject/private/
+/Q1/nbproject/private/
+/Slot8/build/
+/Q1/build/
+/Q2/nbproject/private/
+/Q2/build/
