--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,12 @@
 /Q1/build/
 /Q2/nbproject/private/
 /Q2/build/
+/2_10/nbproject/private/
+/Slot9/nbproject/private/
+/given_Slot 9/Q1/build/
+/given_Slot 9/Q2/build/
+/given_Slot 9/Q3/build/
+/Lap4/Part1/ItemManager/nbproject/private/
+/Lap4/Part1/Slot10/nbproject/private/
+/2_10/build/
+/Lap4/Part1/ItemManager/build/
