--- a/Slot9/nbproject/project.properties
+++ b/Slot9/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/q2.jar
+dist.jar=${dist.dir}/Slot9.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=q2.Brick
+main.class=slot9.Shape
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
