--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@
 /Slot12/build/
 /Slot13/nbproject/private/
 /Slot13/build/
+/Chapter09/nbproject/private/
+/Lap5/OrganizationManager/nbproject/private/
+/Lap5/OrganizationManager/build/
+/Slot15/given/given/Q1/build/
+/Slot15/given/given/Q2/build/
+/Slot15/given/given/Q1/dist/
+/Slot15/given/given/Q3/build/
