--- a/Slot15/given/given/Q2/nbproject/project.properties
+++ b/Slot15/given/given/Q2/nbproject/project.properties
@@ -24,12 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Slot13.jar
+dist.jar=${dist.dir}/Q2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Q1_solut-src=src
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Q1_solut-src}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=employees.ManageProgram
+main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
