--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@
 /Slot15/given/given/Q2/build/
 /Slot15/given/given/Q1/dist/
 /Slot15/given/given/Q3/build/
+/Slot15/given/given/Q2/dist/
+/Lap6/Lap5/nbproject/private/
+/Lap6/Lap5/build/
